MODBULKOPS-468 - Improvement of data import errors saving